Closed
Bug 386799
Opened 16 years ago
Closed 16 years ago
Crash [@ _moz_cairo_surface_get_type] with zero-width <canvas>
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: vlad)
References
Details
(Keywords: assertion, crash, testcase)
Crash Data
Attachments
(2 files)
140 bytes,
text/html
|
Details | |
1.86 KB,
patch
|
pavlov
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: gfxASurface::AddRef without mSurface: 'mSurface != nsnull', file /Users/jruderman/trunk/mozilla/gfx/thebes/src/gfxASurface.cpp, line 66 Thread 0 Crashed: 0 _moz_cairo_surface_get_type 1 gfxASurface::GetType() const 2 nsNativeThemeCocoa::DrawWidgetBackground 3 nsCSSRendering::PaintBackgroundWithSC 4 nsCSSRendering::PaintBackground 5 nsDisplayBackground::Paint 6 nsDisplayList::Paint 7 nsDisplayWrapList::Paint 8 nsDisplayClip::Paint 9 nsDisplayList::Paint ...
Reporter | ||
Comment 1•16 years ago
|
||
Comment 2•16 years ago
|
||
Might want to retest after Mats patch in bug 303901 lands.
Assignee | ||
Comment 3•16 years ago
|
||
Setting a 0,0 scale matrix is a no-no; this avoids that situation, and also bulletproofs the cocoa native theme drawing code somewhat.
Assignee: nobody → vladimir
Status: NEW → ASSIGNED
Attachment #271213 -
Flags: superreview?(roc)
Attachment #271213 -
Flags: review?(roc)
Assignee | ||
Comment 4•16 years ago
|
||
Comment on attachment 271213 [details] [diff] [review] avoid setting bogus cairo matrix Er, meant to ask stuart for review.. but either one, whoever gets to it first please r/sr :)
Attachment #271213 -
Flags: review?(roc) → review?(pavlov)
Updated•16 years ago
|
Attachment #271213 -
Flags: review?(pavlov) → review+
Attachment #271213 -
Flags: superreview?(roc) → superreview+
Comment 5•16 years ago
|
||
r+/sr+ == checkin needed? ;)
Assignee | ||
Updated•16 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Flags: in-testsuite?
Updated•12 years ago
|
Crash Signature: [@ _moz_cairo_surface_get_type]
You need to log in
before you can comment on or make changes to this bug.
Description
•