b=386799, crash with zero-width canvas, r=stuart,sr=roc