widget/src/cocoa/nsNativeThemeCocoa.mm
@@ -512,9 +512,13 @@ nsNativeThemeCocoa::DrawWidgetBackground(nsIRenderingContext* aContext, nsIFrame
 
   double offsetX = 0.0, offsetY = 0.0;
   nsRefPtr<gfxASurface> thebesSurface = thebesCtx->CurrentSurface(&offsetX, &offsetY);
+  if (thebesSurface->CairoStatus() != 0) {
+    NS_WARNING("Got Cairo surface with nonzero error status");
+    return NS_ERROR_FAILURE;
+  }
+
   if (thebesSurface->GetType() != gfxASurface::SurfaceTypeQuartz) {
-    fprintf(stderr, "Expected surface of type Quartz, got %d\n",
-            thebesSurface->GetType());
+    NS_WARNING("Expected surface of type Quartz, got somthing else");
     return NS_ERROR_FAILURE;
   }
 
@@ -524,9 +528,9 @@ nsNativeThemeCocoa::DrawWidgetBackground(nsIRenderingContext* aContext, nsIFrame
 
   //fprintf (stderr, "surface: %p cgContext: %p\n", quartzSurf, cgContext);
 
-  if (cgContext == nsnull ||
-      ((((unsigned long)cgContext) & 0xffff) == 0x3f3f)) {
-    fprintf (stderr, "********** Invalid CGContext!\n");
+  if (cgContext == nsnull) {
+    NS_WARNING("Invalid CGContext!");
+    return NS_ERROR_FAILURE;
   }
 
   // Eventually we can just do a GetCTM and restore it with SetCTM,
